# Nova-Desktop

./: CMakeLists.txt  Libs.cmake  README.md  patch.sh  vcpkg.json
root/app/: CMakeLists.txt
root/app/src/: main.cpp
root/core/: CMakeLists.txt
root/core/include/Nova/Desktop/: core.h  window.hpp
root/core/src/: core.cpp  window.cpp
